testapp/bad-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: broken-reviews
  namespace: bookinfo
spec:
  parentRefs:
    - name: bookinfo-gateway
      namespace: bookinfo
  hostnames:
    - localhost
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/productpage"
      backendRefs:
        - name: productpage
          namespace: bookinfo
          port: 80
